Correction scrollbar

--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 /* Global settings*/
 ::-webkit-scrollbar {
-    width: 7px;
+    width: 10px;
 }
 
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    border-radius: 3.5px;
+    border-radius: 7px;
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 3.5px;
-    -webkit-box-shadow: inset 3px 3px 6px rgba(255,255,255,0.5);
+    border-radius: 7px;
+    -webkit-box-shadow: inset 1px 1px 3px rgba(255,255,255,0.5);
     background-color: #000;
 }
 
